# LST

./: .plan,2024,5-May,27,1417,odin,direction,zdes,i,zachas.plan  curses_typing_demo.py  pyproject.toml
_ d r a w s/: LICENSE
contants/: colors.py  prompts.py
src/: README.LST.md
src/contants/: README.constants.md  text.py
